--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Este aplicativo foi deenvolvido na Semana Spring React"
+      content="Este aplicativo foi desenvolvido na Semana Spring React"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
@@ -16,7 +16,7 @@
     <title>DSVendas</title>
   </head>
   <body>
-    <noscript>ocê precisa habilitar o JavaScript para rodar este app.</noscript>
+    <noscript>você precisa habilitar o JavaScript para rodar este app.</noscript>
     <div id="root"></div>
   </body>
 </html>
